Postgre sql integration (#45)
* Add PostgreSQL and dotenv-java dependencies; update .gitignore for .env

* Add SQLActions utility class for database operations

* Migrate user data management from file-based implementation to database implementation with new `SQLActions` class.

Refactor serviceImpl structure and layering
Refactor error handling across app

* added methods getStudentById? executeUpdate, updateStudentRole, demoteAllHeadsInGroup
rewrote getAll()
update StudentServiceImpl with SQL

* Completed ToDo classes: Student Controller, Teacher Controller, Student Role, SheduleService Impl, studentSubMenu in ConsoleMenu

* Refactor method createTeacherWithParts in TeacherController
Added setters for fields in SQLActions

* database integration in AuthServiceImpl
added method findUserByEmail (and getStudent/TeacherByEmail in SQLActions)
Superuser???

* implement login/registration with JDBC integration
cleanup Student/Teacher controllers
superuser integration
add English JavaDoc documentation

* Refactor validation logic and error handling; introduce Dotenv for environment variables and new admin management features

* Update README to reflect migration to PostgreSQL, add configuration and setup details

* Use Dotenv for password pepper and salt configuration; update README with new .env setup details

* Delete target directory

* Remove `UserDB` implementation; migrate dependency and salt configurations; refactor controller validation logic; switch password hashing to Argon2

* Refactor password hashing to Argon2id, enhance salt generation with SecureRandom, update error handling, improve database utility methods, and document changes in README.

* Refactor FieldValidator and SQLActions classes; enhance salt handling with RANDOM_SALT_LENGTH, improve error messages, remove redundant methods, and update README and .gitignore accordingly.

* Add unit tests, and minor fixes

* Refactor FieldValidator and SQLActions to improve configuration handling, enhance error me